[FIX] Aligned social icons in mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,10 @@ header.masthead {
     padding: 100px 0;
 }
 
+.list-inline {
+    text-align: center;
+}
+
 /**********************************************/
 
 .timeline {
